[package]
name = "aoc24"
version = "24.4.1"
edition = "2021"

[[bin]]
name = "aoc24-eval"
path = "src/main.rs"

[lib]
name = "aoc24"
path = "src/lib.rs"

[[bench]]
name = "codspeed"
harness = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.13.0"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
paste = "1.0.15"
reqwest = { version = "0.12.9", features = ["blocking"] }
# logos = "0.14.2"
# pest = { version = "2.7.14", features = ["miette-error"] }
# pest_derive = "2.7.14"
