[package]
name = "aoc24"
version = "24.4.1"
edition = "2021"

[lib]
name = "aoc24"
path = "src/lib.rs"
doctest = false

[[bench]]
name = "codspeed"
harness = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
arrayvec = "0.7.6"
indexmap = "2.7.0"
itertools = "0.13.0"
num-rational = "0.4.2"
pathfinding = "4.12.0"
petgraph = "0.6.5"
rayon = "1.10.0"
rustc-hash = "2.1.0"
smallvec = "1.13.2"
# logos = "0.14.2"
# pest = { version = "2.7.14", features = ["miette-error"] }
# pest_derive = "2.7.14"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }
paste = "1.0.15"
ureq = "2.12.1"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

